<resources>
    <string name="app_name">DND++</string>
    <string name="tile_name">Advanced DND</string>
    <string name="doNotDisturb">Do not disturb</string>

    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_more_settings">More settings</string>
    <string name="action_give_dnd_access">Give Do not disturb access</string>
    <string name="action_open_dnd_popup">Test Do not disturb popup</string>
    <string name="action_dnd_settings">Open system DND settings</string>

    <string name="toast_give_dnd">Please enable Do not disturb access</string>

    <string name="help_tile">Add the \'Advanced DND\' tile to your settings tiles to access DND mode</string>

    <string name="interruptionFilterAll">Advanced DND</string>
    <string name="interruptionFilterPriority">Priority Only</string>
    <string name="interruptionFilterAlarms">Alarms Only</string>
    <string name="interruptionFilterNone">Total Silence</string>
    <string name="interruptionFilterPriorityBtn">Priority\nOnly</string>
    <string name="interruptionFilterAlarmsBtn">Alarms\nOnly</string>
    <string name="interruptionFilterNoneBtn">Total\nSilence</string>

    <string name="dndOptionManual">Until you turn off Do not disturb</string>

    <string name="dndOptionTimer">For %s</string>
    <string name="dndUntil">Until %s</string>

    <plurals name="minute">
        <item quantity="one">one minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="hour">
        <item quantity="one">one hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

</resources>
