<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:elevation="4dp"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Current DND status"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/filterText"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter: No filter" />

        <TextView
            android:id="@+id/disableModeText"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Disable when: Manual" />
    </LinearLayout>

    <Button
        android:id="@+id/dndAccessButton"
        android:text="@string/action_give_dnd_access"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dndPopupButton"
        android:text="@string/action_open_dnd_popup"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:id="@+id/dndSettingsButton"
        android:text="@string/action_dnd_settings"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/help_tile"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>